# Shopify-analytics-app

./: .cursorrules  .dockerignore  .env.airbyte-mcp  .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  COMPLIANCE_REPORT.md  DEPLOYMENT_CHECKLIST.md  FILES_CREATED.md  FILE_LOCATIONS.txt  FLEXIBLE_DATE_RANGES_GUIDE.md  IMPLEMENTATION_BREAKDOWN.md  IMPLEMENTATION_PLAN.md  METRICS_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_ON_MAC.md  PHASE2_TECHNICAL_TESTING_SUMMARY.md  PLAN.md  PLAN_DBT_STAGING_MODELS.md  PLAN_EMBEDDED_LOGIN.md  README.md  README_METRICS.md  READY_TO_DEPLOY.txt  RENDER_ENV_VARS_REQUIRED.md  SHOPIFY_MARKETPLACE_LAUNCH_CHECKLIST.md  USER_STORIES.md  USER_STORIES_DETAILED.md  WEBHOOK_TESTING_GUIDE.md  docker-compose.yml  go-live-readiness-report.md  markinsight-white-screen-fix-plan.md  package.json  render.yaml  run-diagnostic.sh  shopify.app.toml  test-frontegg-auth.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
analytics/: EDGE_CASES_ANALYSIS.md  EDGE_CASES_FIXED.md  TENANT_ISOLATION_FIX.md  dbt_project.yml  profiles.yml  profiles.yml.example  render_console_setup.sql  validate_staging.py
backend/: .env.example  ENTITLEMENT_ROUTES_MAIN_ADDITION.md  Makefile  main.py  requirements-dev.txt  requirements.txt
config/: data_freshness_sla.yml  insights.json  plans.json
docker/: backend.Dockerfile  (+2 more)
todo-track/: .gitignore  Cargo.toml
todo-track/src/: cli.rs  error.rs  git.rs  main.rs  parser.rs  scanner.rs  storage.rs
todo-track/src/commands/: check.rs  list.rs  mod.rs  scan.rs  trend.rs
todo-track/test_cases/: edge_cases.rs
(+1214 files in other folders)
